[package]
name = "repos"
version = "0.1.0"
edition = "2021"
description = "The Repositories sidecar for Cross-Platform Explorer — browse & two-way mirror any forge/VCS (CPE-429)."
license = "MIT"

# A sidecar depends ONLY on the contract (ADR 0001 one-way rule). This crate starts as the
# provider-agnostic domain library (provider registry, per-forge manifests); the process entry and
# contract wiring land in CPE-432. Modelled on the Agent Deck (CPE-261).

[dependencies]
sidecar-contract = { path = "../contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Optional TypeScript-binding type derives (CPE-957), OFF by default; the app's superset codegen enables it
# via `repos?/specta`. Pulls the contract's specta feature so shared types derive consistently.
specta = { version = "=2.0.0-rc.22", features = ["derive"], optional = true }

[features]
specta = ["dep:specta", "sidecar-contract/specta"]

[dev-dependencies]
tempfile = "3"
